[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
askama = "0.11.1"
thiserror = "1.0.31"
rusqlite = { version = "0.27.0", features = ["bundled"], links ='libsqlite3-sys' }
r2d2 = "0.8.10"
r2d2_sqlite = "0.20.0"
serde = {version = "1.0.139", features = ["derive"]}